sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: reassignment to val
			i=i+1
                         ^AlgGnomeSort:14: error: reassignment to val
		       i=i-1	
                        ^AlgGnomeSort:16: error: reassignment to val
		       else i=i+1
                             ^